# cvc5-rs

./: .gitmodules  Cargo.toml  README.md
.github/actions/setup-cvc5/: action.yml
.github/workflows/: build.yaml  release.yaml
cvc5-sys/: Cargo.toml  README.md  build.rs
cvc5-sys/prebuilt/: bindings.rs  parser_bindings.rs
cvc5-sys/src/: lib.rs
src/: datatype.rs  grammar.rs  lib.rs  op.rs  parser.rs  proof.rs  result.rs  solver.rs  sort.rs  statistics.rs  synth_result.rs  term.rs  term_manager.rs
tests/: integration.rs
