[workspace]
members = ["cvc5-sys"]
resolver = "3"

[package]
name = "cvc5"
version = "0.4.0"
edition = "2024"
readme = "README.md"
license = "BSD-3-Clause"
description = "High-level Rust bindings for the cvc5 SMT solver"
authors = ["the cvc5 team"]
keywords = ["SMT", "solver", "logic"]
categories = ["science"]
homepage = "https://github.com/cvc5/cvc5-rs"

[features]
parser = ["cvc5-sys/parser"]

[dependencies]
cvc5-sys = { path = "cvc5-sys", version = "=0.4.0" }

[package.metadata.docs.rs]
features = ["parser"]
