[package]
name = "cvc5-sys"
version = "0.2.0"
edition = "2024"
build = "build.rs"
links = "cvc5"
description = "Low-level FFI bindings for the cvc5 SMT solver"
license = "BSD-3-Clause"
repository = "https://github.com/cvc5/cvc5-rs"
keywords = ["FFI", "SMT", "solver", "cvc5"]
categories = ["external-ffi-bindings"]
exclude = ["cvc5/"]

[package.metadata.cvc5]
version = "1.3.1"

[features]
parser = []

[build-dependencies]
bindgen = { version = "0.72", default-features = false, features = ["runtime"] }
toml = "0.8"
