[package]
name = "cvc5-sys"
version = "0.4.0"
edition = "2024"
build = "build.rs"
links = "cvc5"
description = "Low-level FFI bindings for the cvc5 SMT solver"
license = "BSD-3-Clause"
repository = "https://github.com/cvc5/cvc5-rs"
keywords = ["FFI", "SMT", "solver", "cvc5"]
categories = ["external-ffi-bindings"]
exclude = ["cvc5/"]

[package.metadata.cvc5]
version = "1.3.1"

[features]
parser = []
static = ["dep:glob"]

[build-dependencies]
bindgen = { version = "0.72", default-features = false, features = ["runtime"] }
cc = "1"
toml = "0.8"
convert_case = "^0.11"
glob = { version = "0.3", optional = true }

[package.metadata.docs.rs]
features = ["parser", "static"]
